--- a/templates/sections/certificate.html
+++ b/templates/sections/certificate.html
@@ -69,39 +69,39 @@
               </div>
             </div>
             
-            <div class="certificate-stats">
-              <div class="stat-item">
-                <div class="stat-icon">
+            <!-- Redesigned stats area -->
+            <div class="certificate-stats-modern">
+              <div class="stat-modern">
+                <div class="stat-modern-icon">
                   <i class="fas fa-clock"></i>
                 </div>
-                <div class="stat-info">
-                  <h5>8 Months</h5>
-                  <p>Intensive Training</p>
+                <div class="stat-modern-info">
+                  <div class="stat-modern-value">8 Months</div>
+                  <div class="stat-modern-label">Intensive Training</div>
                 </div>
               </div>
-              
-              <div class="stat-item">
-                <div class="stat-icon">
+              <div class="stat-modern">
+                <div class="stat-modern-icon">
                   <i class="fas fa-code"></i>
                 </div>
-                <div class="stat-info">
-                  <h5>15+</h5>
-                  <p>Real Projects</p>
+                <div class="stat-modern-info">
+                  <div class="stat-modern-value">15+</div>
+                  <div class="stat-modern-label">Real Projects</div>
                 </div>
               </div>
-              
-              <div class="stat-item">
-                <div class="stat-icon">
+              <div class="stat-modern">
+                <div class="stat-modern-icon">
                   <i class="fas fa-trophy"></i>
                 </div>
-                <div class="stat-info">
-                  <h5>Certificate ID</h5>
-                  <p>22411C10260324</p>
+                <div class="stat-modern-info">
+                  <div class="stat-modern-value">Certificate ID</div>
+                  <div class="stat-modern-label">22411C10260324</div>
                 </div>
               </div>
             </div>
             
-            <div class="certificate-actions">
+            <!-- Centered actions -->
+            <div class="certificate-actions centered-actions">
               <a href="https://erp.student.najottalim.uz/public/certificate/9d153d70-07b5-4dd9-ae1d-3ff0ea50f531" 
                  target="_blank" 
                  class="cta-primary certificate-link">
